# pylistin

./: .gitignore  README.md  pyproject.toml
pylistin/: __init__.py
test/: test.py
